Fixing issue with center aligning text with letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 	font-size: 60px;
 	color: #FFFFFF;
 	letter-spacing: 40px;
+	text-indent: 40px;
 }
 
 .container {
@@ -58,6 +59,7 @@ footer .container .text-muted a {
 	.container h1 {
 		font-size: 46px;
 		letter-spacing: 38px;
+		text-indent: 38px;
 	}
 }
 
@@ -65,6 +67,7 @@ footer .container .text-muted a {
 	.container h1 {
 		font-size: 38px;
 		letter-spacing: 28px;
+		text-indent: 28px;
 	}
 }
 
@@ -72,6 +75,7 @@ footer .container .text-muted a {
 	.container h1 {
 		font-size: 24px;
 		letter-spacing: 18px;
+		text-indent: 18px;
 	}
 }
 
@@ -79,6 +83,7 @@ footer .container .text-muted a {
 	.container h1 {
 		font-size: 22px;
 		letter-spacing: 17px;
+		text-indent: 17px;
 	}
 }
 
@@ -86,5 +91,6 @@ footer .container .text-muted a {
 	.container h1 {
 		font-size: 20px;
 		letter-spacing: 14px;
+		text-indent: 14px;
 	}
 }
